Fixed <html> not showing in output

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 h2 { margin: 20px 0; }
 h3 { margin:0; }
-p { margin: 16px 0; }
+p { margin: 16px 0; font-size:14px }
 #detector {
     position: absolute;
     top:0;
